2015-02-24  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* misc/openvas_ssh_login.c (openvas_ssh_public_from_private): Add ssh
	key type to the exported public key string.

2015-02-23  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* omp/omp.c (OMP_FMT_STRING_ATTRIB): New function-style macro.
	(omp_get_report_ext): Add new options max_results, host_first_result,
	host_max_results, type, host, pos, timezone, alert_id, delta_report_id,
	delta_states, host_levels, search_phrase, host_search_phrase,
	min_cvss_base, min_qod, notes, notes_details, ignore_pagination.
	(omp_get_system_reports_ext): Add new option slave_id.

	* omp/omp.h (omp_get_report_opts_t): Add fields for new options.
	(omp_get_report_opts_defaults): Initialize report_id, first_result,
	max_results.
	(omp_get_system_reports_opts_t): Add new field slave_id.

2015-02-20  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* omp/omp.c (omp_create_task_ext): Add options alterable,
	hosts_ordering, scanner, schedule, schedule_periods, slave_id,
	in_assets, source_iface, alerts, observers, observer_groups.

	* omp/omp.h: Add #include "../base/array.h".
	(omp_create_task_opts_t): Add new options listed above.

2015-02-17  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* nasl/nasl_ssh.c (nasl_ssh_userauth): Don't attempt to authenticate if
	provided private key is empty.

2015-02-17  Hani Benhabiles <hani.benhabiles@greenbone.net>

	Replace custom dynamic buffer implementation with glib's GString.

	* nasl/nasl_ssh.c (membuf_t): Remove struct.
	(init_membuf, put_membuf, put_membuf_str, put_membuf_comma_str)
	(put_membuf_byte, get_membuf): Remove functions.
	(g_string_comma_str): New function.
	(add_tlv, pkcs8_to_sshprivatekey, exec_ssh_cmd, nasl_ssh_request_exec)
	(nasl_ssh_get_auth_methods): Adjust to use GString instead of membuf_t.

2015-02-16  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* nasl/nasl_ssh.c (read_ssh_nonblocking, nasl_ssh_shell_read): Adjust to